# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./customers";
 export * from "./products";
 export * from "./saleOrders";
 export * from "./payments";
+export * from "./cashbook";
